--- a/components/ui/iconButton.module.css
+++ b/components/ui/iconButton.module.css
@@ -1,4 +1,5 @@
 .icon_button {
     background-color: transparent;
     border: none;
+    color: white;
 }
